# filamind-screen

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DELTAFABS-TEAM.md  DEPLOY.md  README.md  ROADMAP.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build-native.yml  bundle.yml  ci.yml  release.yml
deploy/: 99-filamind-backlight.rules  install-native.sh  install.sh  write-unit.sh
docs/: ARCHITECTURE.md
frontend/: .env.example  .gitignore  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: check-no-external-refs.sh  i18n-keydiff.mjs
frontend/src/: App.vue  main.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/__tests__/: no-global-collapse.spec.ts
frontend/src/components/: AppIcon.vue  EmptyState.vue  NumPad.vue  OnScreenKeyboard.vue  PromptDialog.vue  SleepShield.vue  TabIcon.vue  TempGraph.vue  ToastHost.vue  ToolHeader.vue  TouchShell.vue  TrustRibbon.vue
frontend/src/core/: backlight.ts  control.ts  files.ts  heaters.ts  i18n.ts  idle.ts  jobMeta.ts  localPrefs.ts  osk.ts  remote.ts  session.ts  settings.ts  tempHistory.ts  theme.ts  toast.ts  useWriteGuard.ts
frontend/src/views/: BedMeshView.vue  ConsoleView.vue  ControlView.vue  ExtrudeView.vue  FilesView.vue  MacrosView.vue  MoveView.vue  PowerView.vue  SettingsView.vue  StatusView.vue  TempView.vue  (+2 more)
scripts/: install.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+331 files in other folders)
