# FilaMind screen - native Tauri 2 shell.
#
# Wraps the prebuilt frontend (../frontend/dist) in a fullscreen WebKitGTK webview so the touch UI
# runs as a single native app on the printer's display - no chromium kiosk, no nginx. The webview
# talks to Moonraker directly (ws://localhost:7125); see ../frontend/src/core/session.ts.
[package]
name = "filamind-screen"
version = "0.1.3"
description = "FilaMind screen - on-printer touch control"
authors = ["FilaMind"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The desktop entry point lives in the lib so the same code can back a mobile entry point later.
name = "filamind_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Smaller, faster binary for a low-power single-board host.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
