[package]
name = "filamind-screen"
version = "0.11.1"
description = "FilaMind screen - on-printer touch control"
authors = ["DeltaFabs"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "filamind_screen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
